objects/lightsideapps__Deployment_Set__c.object
<CustomObject>
    <description>Used to store deployment results for each changeset!</description>
    <fields>
        <fullName>lightsideapps__Deployment_Connection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deployment Connection</label>
        <referenceTo>lightsideapps__Deployment_Connection__c</referenceTo>
        <relationshipLabel>Deployment Sets</relationshipLabel>
        <relationshipName>Deployment_Sets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Deployment_Package__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Deployment Package</label>
        <referenceTo>lightsideapps__Deployment_Package__c</referenceTo>
        <relationshipLabel>Deployment Sets</relationshipLabel>
        <relationshipName>Deployment_Sets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lightsideapps__External_Deployment_ID__c</fullName>
        <label>External Deployment ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>lightsideapps__Result_Description__c</fullName>
        <label>Result Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>SucceededPartial</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Canceling</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deployment Set</label>
    <nameField>
        <displayFormat>ds-{0000000}</displayFormat>
        <label>Deployment Sets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>